[project]
name = "bulk-ebook-tool"
version = "1.0.0"
description = "Batch E-book Merger Script"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "EbookLib>=0.18",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "natsort>=8.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.wheel.force-include]
"批量电子书整合.py" = "批量电子书整合.py"